Tue Aug 19 16:39:54 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Revert filtering by awaiting_historic_samples, so that 3.5.1 is
          backward-compatible with 3.5.0.

        * NEWS:

          Add note about the possibility of an error message when 3.5.0
          receives an END_HISTORIC_SAMPLES control message.

        * tests/DCPS/ManyToMany:

          Set svn:ignore.

Tue Aug 19 14:36:56 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/PublisherImpl.cpp:

          Fix fuzz.

Mon Aug 18 21:45:13 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * NEWS:

          Minor updates for 3.5.1 release.

        * dds/DCPS/DataReaderImpl.cpp:

          Removed unwanted log message.

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/PublisherImpl.cpp:

          Validate non-null result of dynamic cast.

        * dds/DCPS/WriteDataContainer.cpp:

          Get and store instance handle prior to deleting sample.
          When deleting sample, set pointer to null to avoid later use.

        * dds/DCPS/ZeroCopySeq_T.cpp:

          Added comment.

        * dds/InfoRepo/PersistenceUpdater.cpp:

          Initialize all data members.

        * tests/DCPS/Messenger/publisher.cpp:

          Correct spelling error.

        * tests/DCPS/PersistentInfoRepo:

          Set svn:ignore.

        * tests/transport/simple/PubDriver.cpp:

          Correct parsing of command line options.

Fri Aug 15 20:53:30 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * README:

          Updated list of operating systems and compilers OpenDDS
          was tested on to reflect the test configurations used
          for daily testing by OCI.

Fri Aug 15 14:16:22 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * AUTHORS:

          Added Peter Oschwald to list of authors.

Thu Aug 14 16:37:40 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * NEWS:
