@@ -1,6 +1,6 @@
-This is OpenDDS version 3.5, released Mon Jan 27 19:10:01 UTC 2014.
+This is OpenDDS version 3.5.1, released Tue Aug 19 16:49:02 UTC 2014.
 
-    OpenDDS VERSION: 3.5
+    OpenDDS VERSION: 3.5.1
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
