@@ -1,4 +1,4 @@
-This is OpenDDS version 3.5, released Mon Jan 27 19:10:01 UTC 2014.
+This is OpenDDS version 3.5.1, released Tue Aug 19 16:49:02 UTC 2014.
 
 This software is open source and free of licensing fees.  See the
 LICENSE file (in this directory) for license details.
